2007-03-14  Sergio Villar Senin  <svillar@igalia.com>

	* Fixed an issue with ACLOCAL_FLAGS in the autogen.sh

2007-03-11  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added the TnyFolderCaps API
	* Improved the tny_folder_copy and tny_folder_transfer_msgs
	implementations to support notifying folder observers about the
	changes that happened

	* This was a major API change

2007-03-10  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added tny_folder_get_url_string and tny_msg_get_url_string APIs
	* Made tny_account_get_url_string consistent in constness with the
	other get_url_string's

	* This was a major API change

2007-03-09  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added the tny_account_store_find_account API. It's possible that in
	future a set and get find strategy API will be added. For now, finding
	using only the url-string will suffice (and adding the find strategy
	later wont break the existing API, or at least doesn't have to as far
	as I can see now -- I might laugh at this entry in future, we'll see)
	
	* Changes to the TnyAccountStore implementations, it's more typical 
	now to let the account store store the instances internally, rather 
	than letting it always return new instances. How else are you going 
	to find the original TnyAccount instance with 
	tny_account_store_find_account?

	* Added the tny_account_matches_url_string API, to determine whether a
	specific account instance matches a specific url_string.

	* This was a major API change

2007-03-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfixes for summary items and writing them to disk, keeping the
	local array in sync with that is on disk
	* Reimplementation of the TnyGtkHeaderListModel, to use a GPtrArray in
	stead of a GList: should be both faster and less memory consuming
	* Removed some non-used camel-lite functionality and symbols

2007-03-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix for ticket #26
	* Major changes in the TnyCamelHeader type